fix the top bar extra area cut off

--- a/public/css/rexy.css
+++ b/public/css/rexy.css
@@ -35,7 +35,6 @@ body {
     border-bottom: none;
     position: relative;
     height: 53px;
-    margin-bottom: 12px;
 }
 
 .header-content {
